Add PHP tokenizer extension